--- a/config
+++ b/config
@@ -5,7 +5,7 @@ R=$RANDOM
 OUTPUTFILE="checker_output_$R"
 ERROROUTPUTFILE="checker_error_output_$R"
 SHELL="../a.out"
-#SHELL="/bin/sh"
+#SHELL="test"
 SLEEP=`which sleep`
 SLEEPSECONDS=1
 LTRACE=`which ltrace`
